url fixes, small template changes

--- a/test/templates/test/todo_list.html
+++ b/test/templates/test/todo_list.html
@@ -29,7 +29,7 @@
             <input
                 value="Add a new item"
                 type="button"
-                onclick="location.href='{% url "test:item-add" todo_list.id %}'"
+                onclick="location.href='{% url 'test:item-add' todo_list.id%}'"
             />
         </p>
     </div>
