--- a/test/templates/test/todo_list.html
+++ b/test/templates/test/todo_list.html
@@ -1,36 +1,50 @@
 <!-- todo_list/todo_app/templates/todo_app/todo_list.html -->
 {% extends "test/base.html" %}
 
+{% load static %}
 {% block content %}
-<div>
+<script src="{% static 'test/Script.js' %}" defer></script>
+<div >
     <div>
-        <div>
-            <h3>Edit list:</h3>
-            <h5>{{ todo_list.title | upper }}</h5>
-        </div>
-        <ul>
+        <h3 class="title is-3 ">Edit list:</h3>
+        <h5 class="title is-5 ">{{ todo_list.title | upper }}</h5>
+    </div>
+    <div class="content">
+        
+        <ul class="sortable-list">
             {% for todo in object_list %}
-            <li>
-                <div>
+            <li draggable="true" class="item">
+                
                     <div
                         role="button"
+                        class="button is-primary is-dark"
                         onclick="location.href=
                         '{% url "test:item-update" todo_list.id todo.id %}'">
                         {{ todo.title }}
-                        (Due {{ todo.due_date | date:"l, F j" }})
-                    </div>
+                        ({{ todo.due_date | date:"j F" }})
                 </div>
+
             </li>
             {% empty %}
             <p>There are no to-do items in this list.</p>
             {% endfor %}
         </ul>
+    </div>
+
+    <div class="content">
         <p>
             <input
+                class="button is-white is-outlined"
                 value="Add a new item"
                 type="button"
-                onclick="location.href='{% url 'test:item-add' todo_list.id%}'"
+                onclick="location.href='{% url 'test:item-add' todo_list.id %}'"
             />
+            <input
+            class="button is-white is-outlined"
+                value="Delete this list"
+                type="button"
+                onclick="location.href=
+                '{% url "test:list-delete" todo_list.id %}'" />
         </p>
     </div>
 </div>
