--- a/test/templates/test/todoitem_form.html
+++ b/test/templates/test/todoitem_form.html
@@ -3,19 +3,32 @@
 
 {% block content %}
 
-<h3>{{ title }}</h3>
+<h3 class="title is-3">{{ title }}</h3>
 <form method="post">
     {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <input
-        value="Submit"
-        type="submit">
-    <input
-        value="Cancel"
-        type="button"
-        onclick="location.href='{% url "test:list" todo_list.id %}'">
+    <div class="content">
+        <table class="table">
+                {{ form.as_table }}
+        </table>
+        <input
+            value="Submit"
+            class="button is-white is-outlined"
+            type="submit">
+        <input
+            value="Cancel"
+            class="button is-white is-outlined"
+            type="button"
+            onclick="location.href='{% url "test:list" todo_list.id %}'">
+        {% if object %}
+            <input
+                value="Delete this item" 
+                type="button"
+                class="button is-white is-outlined"
+                onclick="location.href=
+                '{% url "test:item-delete" todo_list.id object.id %}'">
+        {% endif %}
+    </div>
+
 </form>
 
 {% endblock %}
